--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,13 @@ android {
         applicationId "com.app.jcoffee"
         minSdkVersion 14
         targetSdkVersion 26
+        versionCode 8
+        versionName "1.0.8"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
     }
@@ -32,6 +34,7 @@ dependencies {
     implementation files('libs/uzMam.jar')
     implementation files('libs/uzMcm.jar')
     implementation 'com.zhy:autolayout:1.4.5'
+    implementation 'com.zhy:okhttputils:2.6.2'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
